tests/mm0_mmu/fail/bad-sort413.mm0
-- bad modifier order
free pure provable sort s413;